# Harness-Intelligence-OS

./: .gitignore  Cargo.toml  README.md  README.vi.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  harness-architecture.toml
.github/scripts/: verify-node24-actions.ps1
.github/workflows/: harness-cli-release.yml
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: application.rs  domain.rs  infrastructure.rs  interface.rs  main.rs
docs/: ARCHITECTURE.md  COMMAND_COOKBOOK.md  CONTEXT_RULES.md  FEATURE_INTAKE.md  FRICTION_TAXONOMY.md  GOVERNANCE_REPORT.md  HARNESS.md  README.md  TRACE_SPEC.md  troubleshooting.md
docs/adoption/: clean-clone-walkthrough.md
docs/archive/: README.md
docs/decisions/: 0008-canonical-public-release-origin.md  0012-governance-report-schema.md
docs/demo/: README.md
docs/schemas/: codegraph-impact.schema.json  governance-report.schema.json  notebooklm-brief.schema.json
docs/stories/: US-001-install-harness.md  US-008-trace-quality-scoring.md  US-009-enriched-friction-query.md  US-011-backlog-outcome-workflow.md  US-012-story-verify-command-field.md  (+5 more)
packaging/: production-include.toml
scripts/: README.md  build-production-payload.ps1  build-production-payload.py  build-production-payload.sh  harness-cli-release-tag  install-harness.ps1  install-harness.sh  production_payload_lib.py  verify-adoption-docs.py  verify-governance-report-schema.py  verify-mcp-artifact-contracts.py  verify-production-payload.py
(+120 files in other folders)
