[package]
name = "harness-cli"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "0.9.8"
ureq = { version = "2.12.1", features = ["json"] }
